manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gitops
  namespace: dlh-lab
  labels:
    app: hello-gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
      - name: nginx
        image: registry.redhat.io/ubi9/nginx-124:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html
          mountPath: /opt/app-root/src
      volumes:
      - name: html
        emptyDir: {}
