manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-gitops
  namespace: gitops-demo
spec:
  to:
    kind: Service
    name: hello-gitops
  port:
    targetPort: 8080
